# Terminart

./: .gitignore  Cargo.toml  README.md
src/: app.rs  event.rs  handler.rs  lib.rs  main.rs  tui.rs  ui.rs  ui_help.rs  ui_sidebar.rs  utils.rs  utils_charpicker.rs  utils_shapes.rs
src/components/: brush.rs  cell.rs  charpicker.rs  clicks.rs  history.rs  layers.rs  mod.rs  palette.rs  save_load.rs  tools.rs  undo.rs
src/components/input/: color.rs  mod.rs  text.rs
src/ui/: canvas.rs  debug_mode.rs  help.rs  mod.rs  picker.rs  popup_colorpicker.rs  popup_exit_confirm.rs  popup_export.rs  popup_help.rs  popup_rename.rs  popup_save.rs  rename.rs  sidebar.rs  too_small.rs
src/ui/sidebar/: brushinfo.rs  charpicker.rs  colorpalette.rs  layermanager.rs  mod.rs  toolbox.rs  toolpicker.rs
src/utils/: brush.rs  cell.rs  charpicker.rs  clicks.rs  input.rs  layer.rs  mod.rs  palette.rs  shapes.rs  tools.rs  undo.rs
src/utils/input/: color.rs  mod.rs  text.rs
