[package]
name = "terminart"
version = "0.9.1"
edition = "2021"

[dependencies]
alea = "0.2.2"
anstyle = "1.0.8"
anstyle-parse = "0.2.5"
better-panic = "0.3.0"
ciborium = "0.2.2"
clap = { version = "4.5.16", features = ["cargo", "derive"] }
clap-stdin = "0.5.1"
cli-clipboard = "0.4.0"
crossterm = "0.28.1"
hashbrown = { version = "0.14.5", features = ["serde"] }
ratatui = { version = "0.28.0", features = ["serde"] }
regex = "1.10.6"
serde = { version = "1.0.208", features = ["derive"] }
